[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "should_panic"
harness = false



[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
lazy_static = {version = "1.4" ,features = ["spin_no_std"]}
spin = "0.5.2"




[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 1
test-timeout = 120
